<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/profile"
        android:title="@string/profile" />
    <item android:title="@string/edit_info"
        android:id="@+id/settings" />
    <item android:id="@+id/search"
        android:title="@string/users" />
    <item android:title="@string/download"
        android:id="@+id/download" />
    <item android:title="@string/maps"
        android:id="@+id/maps"/>
    <item android:title="@string/update"
        android:id="@+id/updatePassword" />
    <item android:title="@string/sign_out"
        android:id="@+id/signOut"/>
    <item android:title="@string/web"
        android:id="@+id/web"/>
    <item android:title="@string/chat"
        android:id="@+id/chat"/>
</menu>