<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/edit_profileImage_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/epi"/>

    <Button
        android:id="@+id/edit_insta_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/eih"/>

    <Button
        android:id="@+id/edit_college_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/ecn"/>

    <Button
        android:id="@+id/edit_bio_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/eb"/>

</LinearLayout>