<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/register"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/register_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/name"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <EditText
        android:id="@+id/register_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />


    <Spinner
        android:id="@+id/register_college_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/college"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/register_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_cPassword_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/cPassword"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="italic"
        android:background="@drawable/rounded_corner"/>

</LinearLayout>