<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_rovers_logo2"
        android:contentDescription="@string/imageIn"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceo"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#808080"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cto"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#808080" />

</LinearLayout>