<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="#FFFFFF"/>-->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_rovers_logo2"
        android:contentDescription="@string/imageIn"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/welcome_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="italic"
        android:background="@drawable/rounded_corner"/>

    <Button
        android:id="@+id/welcome_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="italic"
        android:background="@drawable/rounded_corner"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v1_0"
        android:textColor="#808080"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="20sp"/>


</LinearLayout>