<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileImageActivity">

    <LinearLayout
        android:id="@+id/layout_button"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/profileImage_choose_btn"
            android:text="@string/choose"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginEnd="10dp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/profileImage_upload_btn"
            android:text="@string/upload"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginStart="10dp"
            android:textStyle="italic"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/layout_button"
        android:gravity="center">
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/imageUpload"/>
    </LinearLayout>
</RelativeLayout>