<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".TestActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <androidx.cardview.widget.CardView
           android:id="@+id/cardLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="20dp"
           android:layout_margin="5dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true"
           tools:ignore="MissingConstraints">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@drawable/login"
                   android:layout_margin="10dp"
                   android:id="@+id/img"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ghoradeshwar"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|bottom"
                   android:backgroundTint="@color/red"
                   android:src="@drawable/ic_baseline_menu_book_24"
                   app:fabSize="normal"
                   android:id="@+id/floating_button"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   tools:ignore="UnusedAttribute"
                   android:contentDescription="@string/todo" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardLayout_1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="20dp"
           android:layout_margin="5dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true"
           tools:ignore="MissingConstraints">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@drawable/login"
                   android:layout_margin="10dp"
                   android:id="@+id/img_1"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/kundam_mala"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|bottom"
                   android:backgroundTint="@color/red"
                   android:src="@drawable/ic_baseline_menu_book_24"
                   app:fabSize="normal"
                   android:id="@+id/floating_button_1"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   tools:ignore="UnusedAttribute"
                   android:contentDescription="@string/todo" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardLayout_2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="20dp"
           android:layout_margin="5dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true"
           tools:ignore="MissingConstraints">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@drawable/login"
                   android:layout_margin="10dp"
                   android:id="@+id/img_2"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/kasarsai_dam"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|bottom"
                   android:backgroundTint="@color/red"
                   android:src="@drawable/ic_baseline_menu_book_24"
                   app:fabSize="normal"
                   android:id="@+id/floating_button_2"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   tools:ignore="UnusedAttribute"
                   android:contentDescription="@string/todo" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardLayout_3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="20dp"
           android:layout_margin="5dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true"
           tools:ignore="MissingConstraints">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@mipmap/ic_aga_khan_palace"
                   android:layout_margin="10dp"
                   android:id="@+id/img_3"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/aga_khan_palace"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|bottom"
                   android:backgroundTint="@color/red"
                   android:src="@drawable/ic_baseline_menu_book_24"
                   app:fabSize="normal"
                   android:id="@+id/floating_button_3"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   tools:ignore="UnusedAttribute"
                   android:contentDescription="@string/todo" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardLayout_4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="20dp"
           android:layout_margin="5dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true"
           tools:ignore="MissingConstraints">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@drawable/login"
                   android:layout_margin="10dp"
                   android:id="@+id/img_4"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/fc_road"
                   android:layout_gravity="bottom|center_horizontal"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|bottom"
                   android:backgroundTint="@color/red"
                   android:src="@drawable/ic_baseline_menu_book_24"
                   app:fabSize="normal"
                   android:id="@+id/floating_button_4"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   tools:ignore="UnusedAttribute"
                   android:contentDescription="@string/todo" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>


   </LinearLayout>

</ScrollView>